# pickled

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs
examples/: dhat_unpickle.rs  mem_profile.rs  pickle.rs
src/: de.rs  error.rs  lib.rs  object.rs  ser.rs  value.rs  value_impls.rs
test/: arby.rs  mod.rs
test/data/: generate.py  test_bigint_normalization_proto0.pickle  test_bigint_normalization_proto1.pickle  test_bigint_normalization_proto2.pickle  test_bigint_normalization_proto3.pickle  test_bigint_normalization_proto4.pickle  test_bigint_normalization_proto5.pickle  test_dict_numeric_keys.pickle  test_empty_class_proto0.pickle  test_empty_class_proto1.pickle  test_empty_class_proto2.pickle  test_empty_class_proto3.pickle  test_empty_class_proto4.pickle  test_empty_class_proto5.pickle  test_nan_and_zeros.pickle  test_nested_class_proto0.pickle  test_nested_class_proto1.pickle  test_nested_class_proto2.pickle  test_nested_class_proto3.pickle  test_nested_class_proto4.pickle  test_nested_class_proto5.pickle  test_numeric_edges.pickle  test_object_cycle_proto2.pickle  test_set_dedup.pickle  test_shared_object_state_proto2.pickle  test_shared_object_state_proto3.pickle  test_shared_object_state_proto4.pickle  test_shared_object_state_proto5.pickle  test_shared_refs_proto0.pickle  test_shared_refs_proto1.pickle  test_shared_refs_proto2.pickle  test_shared_refs_proto3.pickle  test_shared_refs_proto4.pickle  test_shared_refs_proto5.pickle  test_simple_class_proto0.pickle  test_simple_class_proto1.pickle  test_simple_class_proto2.pickle  test_simple_class_proto3.pickle  test_simple_class_proto4.pickle  test_simple_class_proto5.pickle  (+4 more)
