[package]
name = "pickled"
version = "2.0.0-alpha8"
authors = ["Lander Brandt", "Georg Brandl <georg@python.org>"]
license = "MIT/Apache-2.0"
description = "A serde-based serialization library for Python's pickle format"
repository = "https://github.com/landaire/pickled"
documentation = "http://docs.rs/pickled"
keywords = ["pickle", "python", "serde", "serialization"]
edition = "2024"

[dependencies]
serde = { version = "1.0.104", features = ["rc"] }
byteorder = "1.3.2"
num-bigint = "0.4.0"
num-traits = "0.2.10"
iter-read = "0.3.0"
paste = "1"
criterion = { version = "0.3.5", optional = true }
encoding_rs = { version = "0.8", optional = true }

[features]
default = []
encoding = ["encoding_rs"]

criterion-bench = ["criterion"]
# For the example binary and the test suite.
[dev-dependencies]
serde_derive = "1.0.104"
serde_json = "1.0.44"
rand = "0.9.2"
quickcheck = "1.0.3"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = 1
